Fix: matplot title

--- a/content_feature_extraction.ipynb
+++ b/content_feature_extraction.ipynb
@@ -586,7 +586,7 @@
     "\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.imshow(untransform(noise_tensor.squeeze(0)))\n",
-    "plt.title(\"Before Trainig: content_img\")\n",
+    "plt.title(\"Before Trainig: noise_img\")\n",
     "plt.axis(\"off\")\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
